Fixed resizing issues on mobile in projects section

--- a/styles/components/About.module.css
+++ b/styles/components/About.module.css
@@ -83,7 +83,7 @@
 
 .text {
     font-size: 1.2rem;
-    font-family: var(--main-font);
+    font-family: var(--secondary-font);
     color: var(--accent-color);
     line-height: 1.75rem;
     text-align: justify;
